# voidbox

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build.sh  harmonic_plot.py  native-test.toml
examples/manifests/: brave.toml  discord.toml  vscode.toml
src/: app.rs  lib.rs  main.rs
src/bundle/: mod.rs
src/cli/: bundle.rs  info.rs  install.rs  launcher.rs  list.rs  mod.rs  remove.rs  run.rs  shell.rs  update.rs
src/desktop/: entry.rs  icon.rs  mod.rs  symlink.rs
src/gui/: installer.rs  mod.rs
src/manifest/: mod.rs  parser.rs  schema.rs  validate.rs
src/runtime/: exec.rs  host_bridge.rs  mod.rs  mount.rs  namespace.rs
src/settings/: defaults.rs  mod.rs  overrides.rs
src/storage/: base.rs  cleanup.rs  download.rs  mod.rs  paths.rs
