[package]
name = "void_runner"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["fs", "sched", "mount", "user", "process", "signal", "hostname"] }
ureq = { version = "3.1", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
sha2 = "0.10"
hex = "0.4"
zip = "2.4"
walkdir = "2"
indicatif = "0.18"
which = "7.0"
chrono = "0.4"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
semver = "1.0"

[profile.release]
strip = true
lto = true
