[package]
name = "voidbox"
version = "0.6.0"
edition = "2024"
description = "Universal Linux App Platform - portable, isolated application environments"
license = "MIT"
repository = "https://github.com/nilltadios/voidbox"

[[bin]]
name = "voidbox"
path = "src/main.rs"

# App launchers are now handled via symlinks to voidbox (argv[0] detection)
# Example: ln -s voidbox void_brave

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["fs", "sched", "mount", "user", "process", "signal", "hostname"] }
ureq = { version = "3.1", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"
sha2 = "0.10"
hex = "0.4"
zip = "2.4"
walkdir = "2"
indicatif = "0.18"
which = "7.0"
chrono = "0.4"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
semver = "1.0"
thiserror = "2.0"
atty = "0.2"

[profile.release]
strip = true
lto = true
